--- a/public/css/argon-dashboard.css
+++ b/public/css/argon-dashboard.css
@@ -24265,7 +24265,7 @@ hr.horizontal.gray-light {
 
 .table td,
 .table th {
-  white-space: nowrap;
+  white-space: normal;
 }
 
 .table.align-items-center td,
